# NAP

./: .gitignore  Makefile  README.md  dune-project  dune-workspace  nap.opam
eval/analysis/: sf_ip_analysis.ipynb  sf_ip_analysis.py  sf_ip_plot.ipynb
eval/scripts/: README.md  create_name_list.py  edit_trace.py  edit_trace_script.sh  get_header_fields.sh  global_variables.py  names.list  names_edit_trace.list  run_get_hearders.sh  run_sf_eval.sh  run_tcpreplay_dir_seq.sh  run_trial.sh
examples/applications/: dnsamplification.ca  firewall.ca  ftp.ca  heavyhitters.ca  netcache.ca  ooo.ca  rate.ca  superspreader.ca  synflood.ca
examples/performance/: bloom_1.ca  bloom_2.ca  bloom_3.ca  bloom_4.ca
examples/testcases/: sf_ip_campus.ca
examples/testcases/p4_programs/: sf_ip_campus.p4
examples/tests/: dep.ca  dep2.ca  merge.ca  test2.ca
src/: dune
src/frontend/: Allocator.ml  Builtins.ml  CatIR.ml  Collections.ml  Console.ml  DagIR.ml  DataStruct.ml  DataStructIR.ml  DataStructUtils.ml  Dataflow.ml  Input.ml  InputSpec.ml  Lexer.mll  Memops.ml  MiscUtils.ml  P4IR.ml  Parser.mly  Pipeline.ml  Printing.ml  SetIR.ml  SetUtils.ml  Syntax.ml  SyntaxUtils.ml  Template.ml  TransUtils.ml  Translator.ml  Traverser.ml
src/frontend/datastructs/: Bloom.ml  CountMinSketch.ml  DataStructShared.ml  Fold.ml
src/frontend/modules/: Cid.ml  Cid.mli  Id.ml
